[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "217_contains_duplicate" 
path = "bin/217_contains_duplicate.rs" 

[[bin]]
name = "242_valid_anagram" 
path = "bin/242_valid_anagram.rs" 

[[bin]]
name = "1_two_sum" 
path = "bin/1_two_sum.rs" 

[[bin]]
name = "49_group_anagrams" 
path = "bin/49_group_anagrams.rs" 
