[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "217_contains_duplicate" 
path = "bin/217_contains_duplicate.rs" 

[[bin]]
name = "242_valid_anagram" 
path = "bin/242_valid_anagram.rs" 

[[bin]]
name = "1_two_sum" 
path = "bin/1_two_sum.rs" 

[[bin]]
name = "49_group_anagrams" 
path = "bin/49_group_anagrams.rs" 

[[bin]]
name = "347_top_k_frequent_elements" 
path = "bin/347_top_k_frequent_elements.rs" 

[[bin]]
name = "659_encode_and_decode_strings" 
path = "bin/659_encode_and_decode_strings.rs" 

[[bin]]
name = "36_valid_sudoku" 
path = "bin/36_valid_sudoku.rs" 

[[bin]]
name = "128_longest_consecutive_sequence"
path = "bin/128_longest_consecutive_sequence.rs"

[[bin]]
name = "238_product_of_array_except_self"
path = "bin/238_product_of_array_except_self.rs"

[[bin]]
name = "20_valid_parentheses"
path = "bin/20_valid_parentheses.rs"

[[bin]]
name = "155_min_stack"
path = "bin/155_min_stack.rs"

[[bin]]
name = "150_evaluate_reverse_polish_notation"
path = "bin/150_evaluate_reverse_polish_notation.rs"

[[bin]]
name = "22_generate_parentheses"
path = "bin/22_generate_parentheses.rs"

[[bin]]
name = "739_daily_temperatures"
path = "bin/739_daily_temperatures.rs"

[[bin]]
name = "853_car_fleet"
path = "bin/853_car_fleet.rs"

[[bin]]
name = "84_largest_rectangle_in_histogram"
path = "bin/84_largest_rectangle_in_histogram.rs"

[[bin]]
name = "125_valid_palindrome"
path = "bin/125_valid_palindrome.rs"

[[bin]]
name = "167_two_sum_input_array_is_sorted"
path = "bin/167_two_sum_input_array_is_sorted.rs"

[[bin]]
name = "15_3sum"
path = "bin/15_3sum.rs"

