[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "217_contains_duplicate" 
path = "bin/217_contains_duplicate.rs" 

[[bin]]
name = "242_valid_anagram" 
path = "bin/242_valid_anagram.rs" 

[[bin]]
name = "1_two_sum" 
path = "bin/1_two_sum.rs" 

[[bin]]
name = "49_group_anagrams" 
path = "bin/49_group_anagrams.rs" 

[[bin]]
name = "347_top_k_frequent_elements" 
path = "bin/347_top_k_frequent_elements.rs" 

[[bin]]
name = "659_encode_and_decode_strings" 
path = "bin/659_encode_and_decode_strings.rs" 

[[bin]]
name = "36_valid_sudoku" 
path = "bin/36_valid_sudoku.rs" 

[[bin]]
name = "128_longest_consecutive_sequence"
path = "bin/128_longest_consecutive_sequence.rs"

[[bin]]
name = "238_product_of_array_except_self"
path = "bin/238_product_of_array_except_self.rs"

[[bin]]
name = "20_valid_parentheses"
path = "bin/20_valid_parentheses.rs"

[[bin]]
name = "155_min_stack"
path = "bin/155_min_stack.rs"

[[bin]]
name = "150_evaluate_reverse_polish_notation"
path = "bin/150_evaluate_reverse_polish_notation.rs"

[[bin]]
name = "22_generate_parentheses"
path = "bin/22_generate_parentheses.rs"

[[bin]]
name = "739_daily_temperatures"
path = "bin/739_daily_temperatures.rs"

[[bin]]
name = "853_car_fleet"
path = "bin/853_car_fleet.rs"

[[bin]]
name = "84_largest_rectangle_in_histogram"
path = "bin/84_largest_rectangle_in_histogram.rs"

[[bin]]
name = "125_valid_palindrome"
path = "bin/125_valid_palindrome.rs"

[[bin]]
name = "167_two_sum_input_array_is_sorted"
path = "bin/167_two_sum_input_array_is_sorted.rs"

[[bin]]
name = "15_3sum"
path = "bin/15_3sum.rs"

[[bin]]
name = "11_container_with_most_water"
path = "bin/11_container_with_most_water.rs"

[[bin]]
name = "42_trapping_rain_water"
path = "bin/42_trapping_rain_water.rs"

[[bin]]
name = "704_binary_search"
path = "bin/704_binary_search.rs"

[[bin]]
name = "74_search_a_2d_matrix"
path = "bin/74_search_a_2d_matrix.rs"

[[bin]]
name = "875_koko_eating_bananas"
path = "bin/875_koko_eating_bananas.rs"

[[bin]]
name = "153_find_minimum_in_rotated_sorted_array"
path = "bin/153_find_minimum_in_rotated_sorted_array.rs"

[[bin]]
name = "33_search_in_rotated_sorted_array"
path = "bin/33_search_in_rotated_sorted_array.rs"

[[bin]]
name = "981_time_based_key-value_store"
path = "bin/981_time_based_key-value_store.rs"

[[bin]]
name = "4_median_of_two_sorted_arrays"
path = "bin/4_median_of_two_sorted_arrays.rs"

[[bin]]
name = "121_best_time_to_buy_and_sell_stock"
path = "bin/121_best_time_to_buy_and_sell_stock.rs"

[[bin]]
name = "3_longest_substring_without_repeating_characters"
path = "bin/3_longest_substring_without_repeating_characters.rs"

[[bin]]
name = "424_longest_repeating_character_replacement"
path = "bin/424_longest_repeating_character_replacement.rs"

[[bin]]
name = "76_minimum_window_substring"
path = "bin/76_minimum_window_substring.rs"

[[bin]]
name = "226_invert_binary_tree"
path = "bin/226_invert_binary_tree.rs"

[[bin]]
name = "104_maximum_depth_of_binary_tree"
path = "bin/104_maximum_depth_of_binary_tree.rs"

[[bin]]
name = "100_same_tree"
path = "bin/100_same_tree.rs"

[[bin]]
name = "572_subtree_of_another_tree"
path = "bin/572_subtree_of_another_tree.rs"